bundle template added, completed more of the landing page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
                 class="rounded">
         </div>
     </header>
+    <div class="main-content-bundles">
+        <p class="bundle-title ">Here are my bundles!</p>
+        <div class="bundles">
+            <div class="bundle-item"></div>
+            <div class="bundle-item"></div>
+            <div class="bundle-item"></div>
+            <div class="bundle-item"></div>
+        </div>
+    </div>
+    <div class="quote">
+        <em class="quote-text">"Work out. Eat well. Be patient. Your body will reward you."</em>
+        <div class="credit-container">
+            <p class="credit">-Some random dude</p>
+        </div>
+    </div>
 
 </body>
 
