call to action section and footer added, landing page completed.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
             <p class="credit">-Some random dude</p>
         </div>
     </div>
+    <div class="call-to-action-container">
+        <div class="call-to-action">
+            <div>
+                <p class="call-to-action-content-title">Call to action! it's time!</p>
+                <p class="call-to-action-content-small">Sign up! Get in shape! look good! feel gooddddd!</p>
+            </div>
+            <button class="call-to-action-button">Sign up!</button>
+        </div>
+    </div>
+    <footer>
+        <div style="height: 60px;"></div>
+    </footer>
 
 </body>
 
